增加ttl过期队列、dlx死信队列、ack消息确认机制的简单案例

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
         <module>springboot-rabbitmq-direct-consumer</module>
         <module>springboot-rabbitmq-topic-producer</module>
         <module>springboot-rabbitmq-topic-consumer</module>
+        <module>springboot-rabbitmq-ttl-producer</module>
+        <module>springboot-rabbitmq-ttl-consumer</module>
+        <module>dlx-producer</module>
+        <module>dlx-consumer</module>
+        <module>message-confirm-producer</module>
+        <module>message-confirm-consumer</module>
     </modules>
 
     <properties>
